// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tree-select/demo/basic.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled ant-select-allow-clear"
  role="combobox"
  style="width:300px"
  tabindex="0"
>
  <span
    class="ant-select-selection ant-select-selection--single"
  >
    <span
      class="ant-select-selection__rendered"
    >
      <span
        class="ant-select-selection__placeholder"
      >
        Please select
      </span>
    </span>
    <span
      class="ant-select-arrow"
      style="outline:none"
    >
      <i
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
          />
        </svg>
      </i>
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/checkable.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled"
  role="combobox"
  style="width:300px"
  tabindex="-1"
>
  <span
    class="ant-select-selection ant-select-selection--multiple"
  >
    <ul
      class="ant-select-selection__rendered"
    >
      <li
        class="ant-select-selection__choice"
        role="menuitem"
        style="user-select:none;-webkit-user-select:none"
        title="Node1"
        unselectable="unselectable"
      >
        <span
          class="ant-select-selection__choice__remove"
        >
          <i
            class="anticon anticon-close ant-select-remove-icon"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="close"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
              />
            </svg>
          </i>
        </span>
        <span
          class="ant-select-selection__choice__content"
        >
          Node1
        </span>
      </li>
      <li
        class="ant-select-search ant-select-search--inline"
      >
        <span
          class="ant-select-search__field__wrap"
        >
          <input
            aria-autocomplete="list"
            aria-label="filter select"
            aria-multiline="false"
            class="ant-select-search__field"
            type="text"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
    <span
      class="ant-select-search__field__placeholder"
      style="display:none"
    >
      Please select
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/multiple.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled ant-select-allow-clear"
  role="combobox"
  style="width:300px"
  tabindex="-1"
>
  <span
    class="ant-select-selection ant-select-selection--multiple"
  >
    <ul
      class="ant-select-selection__rendered"
    >
      <li
        class="ant-select-search ant-select-search--inline"
      >
        <span
          class="ant-select-search__field__wrap"
        >
          <input
            aria-autocomplete="list"
            aria-label="filter select"
            aria-multiline="false"
            class="ant-select-search__field"
            type="text"
            value=""
          />
          <span
            class="ant-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
    <span
      class="ant-select-search__field__placeholder"
      style="display:block"
    >
      Please select
    </span>
  </span>
</span>
`;

exports[`renders ./components/tree-select/demo/treeData.md correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="ant-select ant-select-enabled"
  role="combobox"
  style="width:300px"
  tabindex="0"
>
  <span
    class="ant-select-selection ant-select-selection--single"
  >
    <span
      class="ant-select-selection__rendered"
    >
      <span
        class="ant-select-selection__placeholder"
      >
        Please select
      </span>
    </span>
    <span
      class="ant-select-arrow"
      style="outline:none"
    >
      <i
        class="anticon anticon-down ant-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M895.7 300.1c0 9.6-3.2 19.3-9.6 27.4L545.2 751.3c-8.3 10.3-20.8 16.3-34.1 16.3-13.2 0-25.8-6-34-16.3L138 329.3c-15.1-18.8-12.1-46.3 6.7-61.4 18.8-15.1 46.3-12.1 61.4 6.7l305.1 379.6L818 272.7c15.1-18.8 42.6-21.8 61.4-6.7 10.7 8.7 16.3 21.3 16.3 34.1z"
          />
        </svg>
      </i>
    </span>
  </span>
</span>
`;
